--- a/jekyll-serif-theme-master/_config.yml
+++ b/jekyll-serif-theme-master/_config.yml
@@ -1,6 +1,6 @@
 baseurl: '/'
 permalink: pretty
-title: 'Jekyll Serif'
+title: 'Bitcoinstitution'
 
 logo:
   mobile: "images/logo/logo-mobile.svg"
@@ -9,13 +9,7 @@ logo:
   desktop: "images/logo/logo.svg"
   desktop_height: "32px"
   footer: "images/logo/logo-footer.svg"
-  footer_height: "32px"
-
-home: 
-  limit_services: 6
-  limit_myths: 6
-  limit_team: 6
-
+  footer_height:
 collections:
   myths:
     output: true
