Adjust medium view section team

--- a/jekyll-serif-theme-master/_config.yml
+++ b/jekyll-serif-theme-master/_config.yml
@@ -34,7 +34,7 @@ defaults:
       layout: "service"
   - scope:
       path: ""
-      type: "team"
+      type: "teams"
     values:
       layout: "team"
 
